fixing footer overflowing nav dropdown

--- a/footer.css
+++ b/footer.css
@@ -1,7 +1,7 @@
 /* FOOTER */
-footer {
+.footer-container {
     position: relative;
-    z-index: 1;
+    z-index: -1;    
 }
 
 .newsletter {
